syntax = "proto3";

package book;

option go_package = "github.com/BlazeCode1/books-api/client/book";


service BookService {
//  grpc method to handle a book name
  rpc AddBook(BookRequest) returns (BookResponse);
  rpc GetBooks (EmptyRequest) returns (BookListResponse);
  rpc DeleteBook(BookDeletionRequest) returns (BookResponse);

}

message BookRequest {
  string book_name = 1;
}

message BookDeletionRequest {
  string id = 1;
}

message BookResponse {
  string message = 1;
}

// Request and response messages
message EmptyRequest {}

message BookListResponse {
  repeated Book books = 1;
}

message Book {
  string id = 1;
  string book_name = 2;
}